[package]
name = "app-error"
version = "0.1.0"
edition = "2024"
description = "Error type for applications"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zenithsiz/app-error"

[dependencies]

itertools = "0.14.0"

[lints]

# Must use `expect` instead of `unwrap`
clippy.unwrap_used = "forbid"
